# Porcupy

./: .coverage  .readthedocs.yaml  HISTORY.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: codecov.yml  test.yml
docs/: api_reference.md  index.md  requirements.txt  user_guide.md
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: index.doctree
docs/_build/html/.doctrees/api_reference/: api_reference.doctree
docs/_build/html/.doctrees/autoapi/: index.doctree
docs/_build/html/.doctrees/autoapi/porcupy/: index.doctree
docs/_build/html/.doctrees/examples/: advanced_optimization.doctree  basic_optimization.doctree  real_world_applications.doctree
docs/_build/html/.doctrees/getting_started/: configuration.doctree  installation.doctree  quickstart.doctree
docs/_build/html/_modules/: index.html  porcupy.html
docs/_build/html/_modules/porcupy/: base.html  cpo.html  cpo_class.html  functions.html  gpu_cpo.html  porcupines.html
docs/_build/html/_modules/porcupy/utils/: defense_visualization.html  enhanced_visualization.html  helpers.html  interactive_visualization.html  plotting.html  population.html  population_visualization.html  visualization.html  visualization_manager.html
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/porcupy/: index.rst.txt
docs/_build/html/_static/: copybutton.js
docs/_build/html/api_reference/: api_reference.html
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/porcupy/: index.html
docs/_build/html/examples/: advanced_optimization.html  basic_optimization.html  real_world_applications.html
docs/_build/html/getting_started/: configuration.html  installation.html  quickstart.html
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
examples/: 3d_visualization_example.py  backward_compatibility.py  basic_optimization.py  constrained_optimization.py  cpo_example.py  custom_defense_mechanisms.py  defense_mechanism_visualization.py  gpu_acceleration_demo.py  interactive_visualization.py  parallel_hybrid_optimization.py  parameter_sensitivity.py  population_dynamics_visualization.py  visualization_demo.py
porcupy/: __init__.py  cpo.py  cpo_class.py  functions.py  gpu_cpo.py
porcupy.egg-info/: PKG-INFO  SOURCES.txt
porcupy/utils/: enhanced_visualization.py  plotting.py  population_visualization.py  visualization_manager.py
tests/: test_cpo.py  test_cpo_class.py  test_defense_visualization.py  test_enhanced_visualization.py  test_functions.py  test_helpers.py  test_init.py  test_plotting.py  test_population.py  test_population_visualization.py  test_utils.py  test_visualization.py  test_visualization_integration.py  test_visualization_integration_fixed.py  test_visualization_manager.py
(+48 files in other folders)
